--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = []
+
+[project.urls]
+Homepage = "https://github.com/diodinc/pcb"
+
+[project.scripts]
+pcb = "cli:main"
