--- a/crates/pcb-kicad/Cargo.toml
+++ b/crates/pcb-kicad/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "pcb-kicad"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+repository = { workspace = true }
+homepage = { workspace = true }
+authors = { workspace = true }
+description = "KiCad integration for PCB design tools"
 
 [dependencies]
 anyhow = { workspace = true }
