--- a/crates/pcb-layout/Cargo.toml
+++ b/crates/pcb-layout/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "pcb-layout"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+repository = { workspace = true }
+homepage = { workspace = true }
+authors = { workspace = true }
+description = "PCB layout generation and management"
 
 [dependencies]
 anyhow = { workspace = true }
