--- a/crates/pcb-sexpr/Cargo.toml
+++ b/crates/pcb-sexpr/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "pcb-sexpr"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+repository = { workspace = true }
+homepage = { workspace = true }
+authors = { workspace = true }
+description = "S-expression parser for PCB file formats"
 
 [dependencies]
 log = { workspace = true }
