--- a/crates/pcb-zen-core/Cargo.toml
+++ b/crates/pcb-zen-core/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "pcb-zen-core"
-version = "0.1.0"
-edition = "2021"
+version = { workspace = true }
+edition = { workspace = true }
+repository = { workspace = true }
+homepage = { workspace = true }
+authors = { workspace = true }
+description = "Core functionality for Zen PCB design language"
 
 [features]
 default = ["native"]
