Add stdlib build test (#13)
* Add stdlib build test

* update

* update

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -101,3 +101,24 @@ jobs:
           RUST_LOG: debug
           RUST_BACKTRACE: full
         run: cargo test --verbose --workspace
+
+      - name: Test stdlib builds
+        shell: bash
+        run: |
+          # Save current directory
+          ORIGINAL_DIR=$(pwd)
+
+          # Clone the stdlib repository
+          git clone https://github.com/diodeinc/stdlib.git /tmp/stdlib
+
+          # Find all .star and .zen files and build them
+          cd /tmp/stdlib
+          find . -name "*.star" -o -name "*.zen" | while read -r file; do
+            echo "Building $file..."
+            if ! (cd "$ORIGINAL_DIR" && cargo run -p pcb -- build "/tmp/stdlib/$file"); then
+              echo "Failed to build $file"
+              exit 1
+            fi
+          done
+
+          echo "All stdlib files built successfully!"
