[MODULE] resolve workspace loads (#19)
* use load resolving with modules

* local package resolution

* fix spec

* update snapshots

* remove unnecessary code

* move to snapshot tests

* revert eval errors

* canonical cache

* make tests work on windows

* refresh snap

* do not shadow alias

* fix: Add serial_test to prevent race conditions in module loading tests

- Add serial_test dependency to pcb-zen crate
- Mark tests that use package aliases with #[serial_test::serial]
- This prevents race conditions with the global ALIAS_CACHE when tests run in parallel
- Fixes test failures on Ubuntu where path canonicalization differs from macOS

--- a/crates/pcb-zen/Cargo.toml
+++ b/crates/pcb-zen/Cargo.toml
@@ -64,3 +64,4 @@ tempfile = { workspace = true }
 insta = { workspace = true }
 serde_yaml = { workspace = true }
 zip = { workspace = true }
+serial_test = { workspace = true }
