[FMT] implement formatter (#25)
* add pcb fmt

* unify pcb path in extension

* change the name of the extension

* bundle buildifier

* better path res

* fix clippy

* recursive

* fix format

* fix one more

* cargo info

* fix format on save

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,5 @@
 [workspace]
-members = [
-    "crates/*",
-]
+members = ["crates/*"]
 resolver = "2"
 
 [workspace.package]
@@ -28,6 +26,7 @@ pcb-ui = { path = "crates/pcb-ui" }
 pcb-kicad = { path = "crates/pcb-kicad" }
 pcb-sexpr = { path = "crates/pcb-sexpr" }
 pcb-starlark-lsp = { path = "crates/pcb-starlark-lsp" }
+pcb-buildifier = { path = "crates/pcb-buildifier" }
 
 anyhow = "1.0"
 ariadne = { version = "0.5", features = ["auto-color"] }
