--- a/crates/pcb/Cargo.toml
+++ b/crates/pcb/Cargo.toml
@@ -30,4 +30,5 @@ colored = { workspace = true }
 pcb-kicad = { workspace = true }
 open = { workspace = true }
 inquire = { workspace = true }
-pcb-ui = { workspace = true } 
+pcb-ui = { workspace = true }
+pcb-buildifier = { workspace = true }
