[FIX] multiple .pcb caches (#59)
* fix .pcb cache instantiation

* fix format

--- a/crates/pcb/Cargo.toml
+++ b/crates/pcb/Cargo.toml
@@ -20,6 +20,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = { workspace = true }
 clap = { workspace = true }
+pcb-zen-core = { workspace = true }
 pcb-zen = { workspace = true }
 pcb-sch = { workspace = true }
 pcb-layout = { workspace = true }
