Switch to larger github runners (#90)
* Switch to larger github runners

The "xlarge" in "macos-15-xlarge" doesn't actually mean extra large. The
"x" indicates arm64 as opposed to Intel.

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Remove dep on deprecated actions-rs/toolchain@v1

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

---------

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,18 +24,16 @@ jobs:
       matrix:
         config:
           - name: Windows
-            runs-on: windows-latest
+            runs-on: windows-large
           - name: macOS
-            runs-on: macos-latest
-          - name: macOS 14
-            runs-on: macos-14
+            runs-on: macos-15-xlarge
           - name: Ubuntu
-            runs-on: ubuntu-latest
+            runs-on: ubuntu-large
             container:
               image: kicad/kicad:9.0.3  # Keep in sync with KICAD_VERSION
               options: --user root
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
       - name: Install Dependencies (Ubuntu)
         if: matrix.config.name == 'Ubuntu'
@@ -76,11 +74,8 @@ jobs:
           choco install kicad --version ${{ env.KICAD_VERSION }} -y
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
           components: rustfmt, clippy
 
       - name: Cache Cargo
