Initial implementation of interface subclasses + auto-promotion (#89)
* Add serialize(), deserialize() builtins for debugging

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add field(), __post_init__ to interface()

Also, add better print() behavior.

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add interface/net promotion

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Remove Cargo.toml patch

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Fix example

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Fix test workspace

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add interface arg type checking

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Update spec.mdx

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Allow `using(Net)`

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

---------

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ homepage = "https://github.com/diodeinc/pcb"
 authors = ["Diode Computers, Inc. <founders@diode.computer>"]
 
 [workspace.dependencies]
-starlark = { git = "https://github.com/LK/starlark-rust", rev = "5d994c5c" }
-starlark_map = { git = "https://github.com/LK/starlark-rust", rev = "5d994c5c" }
-starlark_derive = { git = "https://github.com/LK/starlark-rust", rev = "5d994c5c" }
-starlark_syntax = { git = "https://github.com/LK/starlark-rust", rev = "5d994c5c" }
-allocative = { git = "https://github.com/LK/starlark-rust", rev = "5d994c5c" }
+starlark = { git = "https://github.com/diodeinc/starlark-rust", rev = "af998d7" }
+starlark_map = { git = "https://github.com/diodeinc/starlark-rust", rev = "af998d7" }
+starlark_derive = { git = "https://github.com/diodeinc/starlark-rust", rev = "af998d7" }
+starlark_syntax = { git = "https://github.com/diodeinc/starlark-rust", rev = "af998d7" }
+allocative = { git = "https://github.com/diodeinc/starlark-rust", rev = "af998d7" }
 
 pcb-command-runner = { path = "crates/pcb-command-runner" }
 pcb-eda = { path = "crates/pcb-eda" }
