`pcb` cli-level testing (#96)
* Add sandbox

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add dir snapshotting

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add branch support, snapshot_dir

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add snapshot testing of stdout/stderr

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Only use local files for workspace root detection

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add bom, release tests

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add pcb vendor snapshot test

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Sanitize linux tmp dir paths

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Ignore some tests on Windows

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Reuse dep fetching code from pcb-zen

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Fix download race condition

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Bump lock file

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Specify default branch

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Suppress 3d export logs to stdout

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

---------

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -104,17 +104,16 @@ jobs:
           RUST_BACKTRACE: full
         run: cargo test --verbose --workspace
 
+      - name: Run slow tests
+        env:
+          RUST_LOG: debug
+          RUST_BACKTRACE: full
+        run: cargo test --verbose -p pcb -- --ignored
+
       - name: Test CLI (E2E)
         env:
           RUST_LOG: info,pcb::release=debug,pcb::bom=debug
         run: |
-          # Test BOM generation on example project
-          cargo run -- bom examples/PhaseDriver/PhaseDriver.zen -f json
-
-          # Test simple workspace (no pcb.toml)
-          cargo run -- bom test-workspaces/simple/boards/TestBoard.zen
-          cargo run -- release test-workspaces/simple/boards/TestBoard.zen
-
           # Test workspace with pcb.toml and workspace-relative loads
           cargo run -- bom test-workspaces/with-pcb-toml/boards/WorkspaceTestBoard.zen
           cargo run -- release test-workspaces/with-pcb-toml/boards/WorkspaceTestBoard.zen
