[DIO-319] Add board config to `pcb.toml`, `pcb info` (#92)
* Add board config to pcb.toml, pcb info

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Choose first board (when sorted) as fallback default

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add secondary heuristics pass to detect boards without pcb.toml

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Update snapshots

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Don't allow malformed pcb.toml

Empty pcb.toml is fine.

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Don't copy .pcb/cache into test fixture

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Replace test-workspace with snapshot tests of pcb info

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

---------

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/test-workspaces/with-pcb-toml/boards/pcb.toml
+++ b/test-workspaces/with-pcb-toml/boards/pcb.toml
@@ -1,5 +1,6 @@
-[module]
-name = "test_board"
+[board]
+name = "WorkspaceTestBoard"
+path = "WorkspaceTestBoard.zen"
 
 [packages]
 kicad = "@github/diodeinc/kicad"
