Add `pcb tag` (#117)
* Add `pcb tag`

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

* Add `--force` flag to `pcb tag`

Also, remove the version ordering validation.

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

---------

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -100,6 +100,7 @@ url = "2.5"
 dir-diff = "0.3"
 ignore = "0.4"
 sha2 = "0.10"
+semver = "1.0"
 
 # The profile that 'dist' will build with
 [profile.dist]
