Add `pcb sim` to setup spice simulation from schematics (#56)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ pcb-sexpr = { path = "crates/pcb-sexpr", features = ["serde"] }
 pcb-starlark-lsp = { path = "crates/pcb-starlark-lsp" }
 pcb-buildifier = { path = "crates/pcb-buildifier" }
 pcb-test-utils = { path = "crates/pcb-test-utils" }
+pcb-sim = { path = "crates/pcb-sim" }
 
 anyhow = "1.0"
 ariadne = { version = "0.5", features = ["auto-color"] }
