--- a/crates/pcb-zen/Cargo.toml
+++ b/crates/pcb-zen/Cargo.toml
@@ -55,6 +55,7 @@ pcb-kicad = { workspace = true }
 pcb-sch = { workspace = true }
 pcb-eda = { workspace = true }
 pcb-zen-core = { workspace = true }
+pcb-sim = { workspace = true }
 pcb-ui = { workspace = true }
 
 [lib]
