Fix cargo-dist release flow (#122)
I removed this in https://github.com/diodeinc/pcb/pull/99, but turns out
it's actually needed. So, add it back. But change the path so it doesn't
show up as a workflow.

Signed-off-by: akhilles <akhilvelagapudi@gmail.com>

--- a/dist-workspace.toml
+++ b/dist-workspace.toml
@@ -24,5 +24,4 @@ install-updater = true
 # Which actions to run on pull requests
 pr-run-mode = "skip"
 # GitHub build setup for Node.js
-github-build-setup = "build-setup.yml"
-
+github-build-setup = "../build-setup.yml"
