--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,7 @@ debugserver-types = "0.5.0"
 derivative = "2.2"
 display_container = "0.9.0"
 either = "1.8"
+fixedbitset = "0.4"
 getrandom = "0.2"
 globset = "0.4.13"
 js-sys = "0.3"
@@ -83,6 +84,7 @@ reqwest = { version = "0.12.19", features = ["blocking", "json"] }
 serde-wasm-bindgen = "0.6"
 serde_yaml = "0.9"
 serial_test = "3.0"
+smallvec = "1.15"
 strip-ansi-escapes = "0.2"
 tar = "0.4"
 terminal_size = "0.4.0"
