--- a/crates/pcb/Cargo.toml
+++ b/crates/pcb/Cargo.toml
@@ -38,6 +38,7 @@ pathdiff = { workspace = true }
 starlark = { workspace = true }
 starlark_syntax = { workspace = true }
 comfy-table = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 walkdir = { workspace = true }
 zip = { workspace = true }
